# cargo-docset

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: common.rs  error.rs  io.rs  main.rs
src/commands/: generate.rs
