[package]
name = "cargo-docset"
authors = ["R.Chavignat <r.chavignat@gmail.com>"]
description = "Generates a Zeal/Dash docset for your rust package."
edition = "2018"
version = "0.2.1"

repository = "https://github.com/Robzz/cargo-docset"
readme = "README.md"
license = "Apache-2.0"
keywords = ["zeal", "dash", "docset", "documentation"]
categories = ["development-tools", "command-line-utilities"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "Robzz/cargo-docset", branch = "master" }

[features]
bundled-sqlite = ["rusqlite/bundled"]
default = []

[dependencies]
clap = "2.33"
derive_more = "0.99"
rusqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.6"
toml = "0.5"
