[package]
name = "cargo-docset"
authors = ["R.Chavignat <r.chavignat@gmail.com>"]
description = "Generates a Zeal/Dash docset for your rust package."
edition = "2021"
version = "0.2.1"

repository = "https://github.com/Robzz/cargo-docset"
readme = "README.md"
license = "Apache-2.0"
keywords = ["zeal", "dash", "docset", "documentation"]
categories = ["development-tools", "command-line-utilities"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "Robzz/cargo-docset", branch = "master" }

[features]
bundled-sqlite = ["rusqlite/bundled"]
default = []

[dependencies]
cargo_metadata = "0.15"
clap-cargo = { version = "0.9", features = ["cargo_metadata"] }
clap = { version = "3.2", features = ["std", "color", "suggestions", "derive"] }
derive_more = "0.99"
rusqlite = "0.28"
snafu = "0.7"
