[package]
name = "cargo-docset"
authors = ["R.Chavignat <r.chavignat@gmail.com>"]
description = "Generates a Zeal/Dash docset for your rust package."
edition = "2021"
version = "0.3.1"

repository = "https://github.com/Robzz/cargo-docset"
readme = "README.md"
license = "Apache-2.0"
keywords = ["zeal", "dash", "docset", "documentation"]
categories = ["development-tools", "command-line-utilities"]

[badges]
maintenance = { status = "experimental" }

[features]
bundled-sqlite = ["rusqlite/bundled"]
color = ["clap/color", "termcolor", "atty"]
default = ["color"]

[dependencies]
atty = { version = "0.2", optional = true }
cargo_metadata = "0.15"
clap-cargo = { version = "0.10", features = ["cargo_metadata"] }
clap = { version = "4.0", features = ["std", "suggestions", "derive"], default_features = false }
derive_more = "0.99"
rusqlite = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
termcolor = { version = "1.1", optional = true }
